# django-site-configs

./: README.md  pyproject.toml  setup.py
.github/workflows/: bumpversion.yml  python-publish.yml  python-test.yml  siteconfigs_ci.yml  siteconfigs_develop.yml  sitesettings_ci.yml  sitesettings_develop.yml
develop/core/: apps.py  config.py  forms.py  views.py
develop/develop/: settings.py  urls.py
develop/templates/: base.html
develop/templates/core/: example.html
docs/: conf.py  index.md  index.rst
docs/modules/: models.rst  views.rst
siteconfigs/: admin.py  apps.py  config.py  models.py  tests.py  urls.py  utils.py  views.py
siteconfigs/api/: seriealizers.py  urls.py  views.py
siteconfigs/migrations/: 0001_initial.py
siteconfigs/templates/siteconfigs/: base.html  index.html
siteconfigs/templates/sitesettings/: base.html
sitesettings/: models.py
sitesettings/api/: seriealizers.py  urls.py
sitesettings/templates/sitesettings/: index.html
src/siteconfigs/: admin.py  config.py  models.py  tests.py  urls.py  utils.py  views.py
src/siteconfigs/api/: seriealizers.py  urls.py  views.py
src/siteconfigs/migrations/: 0001_initial.py  0002_auto_20210818_2301.py  0003_auto_20240923_1656.py
