[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.distutils.bdist_wheel]
universal = true

[project]
name = "django-site-configs"
version = "0.1.7"

authors = [
  { name="Grant Viklund", email="renderbox@gmail.com" },
]
description = "A Django app that manages configurations per-site on a multi-site setup.  These configs can be made avaialble to users of different sites or administerd via the Django admin."
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
]
keywords = ["django", "app"]
dependencies = [
    "Django>=3.0,<4.1",
]

[project.optional-dependencies]
dev = [
    "black",
    "flake8",
    "flake8-black",
    "mypy",
    "bandit",
    "isort",
    "django-crispy-forms",
    "django-allauth",
    "django-extensions",
    "toml",
]
docs= [
    "recommonmark",
    "m2r",
    "django_extensions",
    "coverage",
    "Sphinx",
    "rstcheck",
    "sphinx-rtd-theme",
]

[project.urls]
"Homepage" = "https://github.com/renderbox/django-site-configs"
"Bug Tracker" = "https://github.com/renderbox/django-site-configs/issues"
