[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "django-site-configs"
version = "0.3.0"
authors = [
  { name="Grant Viklund", email="renderbox@gmail.com" },
]
description = "A Django app that manages configurations per-site on a multi-site setup.  These configs can be made avaialble to users of different sites or administerd via the Django admin."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
keywords = ["django", "app"]
dependencies = [
    "Django>=3.0,<6.0",
]

[project.optional-dependencies]
dev = [
    "black",
    "flake8",
    "flake8-black",
    "mypy",
    "bandit",
    "isort",
    "django-crispy-forms",
    "django-allauth",
    "django-extensions",
    "toml",
]
test = [
    "black",
    "flake8",
    "flake8-black",
    "mypy",
    "bandit",
    "isort",
    "coverage",
]

[project.urls]
"Homepage" = "https://github.com/renderbox/django-site-configs"
"Bug Tracker" = "https://github.com/renderbox/django-site-configs/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.poetry]
packages = [
    { include = "siteconfigs", from = "src" },
]
